syntax="proto3";

option go_package = "./proto";

package greet_service;

service GreetService{
    //unary just request and response
    rpc SayHello(NoParam)   returns (HelloResponse);

    //server takes a stream request and responds with single response
    rpc SayHelloServerStreaming(NamesList) returns (stream HelloResponse);

    //server takes a single request and returns a stream response
    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessageList);

    //both take and return stream
    rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse);
}

message NoParam{};

message HelloResponse{
    string message = 1;
}

message HelloRequest{
    string name = 1;
}

message NamesList{
    repeated string names = 1;
}

message MessageList{
    repeated string messages = 1;
}